[package]
name = "hpermission"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.0.0"
actix-http = "2.0.0"
actix-rt = "1.1.1"
snmalloc-rs = "0.2.18"
futures = "0.3.5"
serde = "1.0.116"
toml = "0.5.6"
lazy_static = "1.4.0"
jsonwebtoken = "7.2.0"
